--- a/about-page.html
+++ b/about-page.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="NuWay Logo.jpg" type="image/x-icon" />
+    <title>NuWay | About</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
