--- a/home.html
+++ b/home.html
@@ -5,8 +5,27 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/home.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
   <link rel="icon" href="nuway-logo.jpg" type="image/x-icon" />
   <title>Nuway Interiors</title>
+  <style>
+    .social a {
+      color: white;
+      font-size: 1rem;
+      border: 1.6px solid white;
+      border-radius: 50%;
+      padding: .35rem;
+      text-align: center;
+      width: 40px;
+    }
+
+    .social a:hover {
+      color: #fff;
+      background-color: rgb(0, 109, 159);
+      transition: all .3s ease-in-out;
+    }
+  </style>
 </head>
 
 <body>
@@ -111,12 +130,40 @@
           </div>
         </div>
 
-        <div id="contact-section">
-          <div class="col-10">
-
+        <!-- Contact section -->
+        <div class="d-flex justify-content-center" id="contact-section">
+          <div class="col-lg-10 col-11 mt-5 mb-4 p-lg-5 p-3 shadow rounded-5">
+            <h2 style="color: #36a9e0ff;">Contact Us😍</h2><br>
+            <p class="d-flex blockquote-footer justify-content-end">Drop us a line here!</p>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="basic-addon1">🧔🏻‍♂️</span>
+              <input type="text" class="form-control" placeholder="Name" aria-label="Username"
+                aria-describedby="basic-addon1">
+            </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="basic-addon1">✉️</span>
+              <input type="text" class="form-control" placeholder="Email Address" aria-label="Username"
+                aria-describedby="basic-addon1">
+            </div>
+            <div class="input-group">
+              <span class="input-group-text">✏️</span>
+              <textarea class="form-control" placeholder="Write Us!" aria-label="With textarea"></textarea>
+            </div>
           </div>
         </div>
 
+        <!-- Footer section -->
+        <div id="footer-section">
+          <div class="d-flex justify-content-center pt-3 " style="background-color: #36a9e0ff; color: white;">
+            <p>©️Nuway Interiors | Follow us on </p>
+            <div class="social ms-2">
+              <a href="https://www.facebook.com/profile.php?id=100085023799345"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/nuwayinteriors/"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/nuway-interiors/"><i class="bi bi-linkedin"></i></a>
+            </div>
+
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
