--- a/index.html
+++ b/index.html
@@ -5,27 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/home.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
   <link rel="icon" href="nuway-logo.jpg" type="image/x-icon" />
   <title>Nuway Interiors</title>
-  <style>
-    .social a {
-      color: white;
-      font-size: 1rem;
-      border: 1.6px solid white;
-      border-radius: 50%;
-      padding: .35rem;
-      text-align: center;
-      width: 40px;
-    }
-
-    .social a:hover {
-      color: #fff;
-      background-color: rgb(0, 109, 159);
-      transition: all .3s ease-in-out;
-    }
-  </style>
 </head>
 
 <body>
@@ -33,10 +16,10 @@
     <div class="row">
       <div class="col-sm-12">
         <!-- navbar -->
-        <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar fixed-top navbar-expand-lg bg-body-secondary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <img class="m-2" src="nuway-logo.jpg" alt="Logo" width="50px">Nuway Interiors</a>
+            <span class="navbar-brand" href="#">
+              Nuway Interiors</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
               aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -82,10 +65,11 @@
 
         <!-- Projects section  -->
         <div id="project-section">
-          <span class="d-flex justify-content-center h1 m-5"> Our Projects</span>
-          <div class="d-sm-flex">
+          <br><br>
+          <span class="d-flex justify-content-center h1 mb-1"> Our Projects</span>
+          <div class="d-sm-flex scrolling-wrapper row-cols-sm-4  flex-row flex-nowrap">
 
-            <div class="card m-4 shadow">
+            <div class="card card-block m-4 shadow">
               <div class="card-body">
                 <h4 class="card-title">Project 1</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -93,8 +77,7 @@
               </div>
               <img src="./carousel images/img1.jpg" class="card-img-bottom" alt="...">
             </div>
-
-            <div class="card m-4 shadow">
+            <div class="card card-block m-4 shadow">
               <div class="card-body">
                 <h4 class="card-title">Project 2</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -102,7 +85,7 @@
               </div>
               <img src="./carousel images/img3.jpg" class="card-img-bottom" alt="...">
             </div>
-            <div class="card m-4 shadow">
+            <div class="card card-block m-4 shadow">
               <div class="card-body">
                 <h4 class="card-title">Project 3</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -110,7 +93,7 @@
               </div>
               <img src="./carousel images/img4.jpg" class="card-img-bottom" alt="...">
             </div>
-            <div class="card m-4 shadow">
+            <div class="card card-block m-4 shadow">
               <div class="card-body">
                 <h4 class="card-title">Project 4</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -124,7 +107,7 @@
 
         <!-- About section  -->
         <div id="about-section">
-          <div class="d-grid justify-content-center p-3" style="background-color: #36a9e0ff; color: white;">
+          <div class="d-grid justify-content-center p-3 bg-gradient" style="background-color: #36a9e0ff; color: white;">
             <h2>About Us</h2><br>
             <p> "Here at nuway interiors, we specialize in making people's dream homes a reality"</p>
           </div>
@@ -151,24 +134,27 @@
             </div>
           </div>
         </div>
+      </div>
 
-        <!-- Footer section -->
-        <div id="footer-section">
-          <div class="d-flex justify-content-center pt-3 " style="background-color: #36a9e0ff; color: white;">
-            <p>©️Nuway Interiors | Follow us on </p>
-            <div class="social ms-2">
-              <a href="https://www.facebook.com/profile.php?id=100085023799345"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/nuwayinteriors/"><i class="bi bi-instagram"></i></a>
-              <a href="https://www.linkedin.com/company/nuway-interiors/"><i class="bi bi-linkedin"></i></a>
-            </div>
-
+      <!-- Footer section -->
+      <div id="footer-section">
+        <div class="pt-3 bg-gradient" style="background-color: #36a9e0ff; color: white;">
+          <p class="text-center">©️Nuway Interiors | Follow us on </p>
+          <div class="d-flex justify-content-center" id="social">
+            <a class="m-1" target="_blank" href="https://www.facebook.com/profile.php?id=100085023799345"><i
+                class="bi bi-facebook"></i></a>
+            <a class="m-1" target="_blank" href="https://www.instagram.com/nuwayinteriors/"><i
+                class="bi bi-instagram"></i></a>
+            <a class="m-1" target="_blank" href="https://www.linkedin.com/company/nuway-interiors/"><i
+                class="bi bi-linkedin"></i></a>
           </div>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
