--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-
+  <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
 
 
   <meta charset="utf-8" />
