--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       <div class="row">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="startup-template.html">
+            <a class="navbar-brand" href="index.html">
               <!-- <img width="50px" src="./images/nuway-logo.jpg" alt="Logo" /> -->
               <h5 class="text-white">NuWay Interiors</h5>
             </a>
