--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
-              <!-- <img width="50px" src="./images/nuway-logo.jpg" alt="Logo" /> -->
-              <h5 class="text-white">NuWay Interiors</h5>
+              <img width="50px" src="./images/nuway-logo.jpg" alt="Logo" />
+              <span class="h5 text-white">NuWay Interiors</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarOne"
               aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
