--- a/index.html
+++ b/index.html
@@ -1028,13 +1028,12 @@
                 <a href="javascript:void(0)"> <i class="lni lni-twitter-original"></i> </a>
               </li>
               <li>
-                <a href="https://www.instagram.com/nuwayinteriors/"> <i class="lni lni-instagram-filled"></i> </a>
+                <a href="https://www.instagram.com/nuwayinteriors/" target="_blank"> <i class="lni lni-instagram-filled"></i> </a>
               </li>
               <li>
-                <a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a>
+                <a href="https://www.linkedin.com/company/nuway-interiors/" target="_blank"><i class="lni lni-linkedin-original"></i></a>
               </li>
             </ul>
-
           </div>
         </div>
       </div>
