modified footer caption

--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
               </a>
             </div>
 
-            <p class="text-center">Transforming Spaces, Elevating Lives </p>
+            <p class="text-center">Elevating Spaces,Transforming Lives </p>
             <h5 class="text-center social-title">Follow Us On</h5>
             <ul class="social text-center mt-60">
               <li>
