removed hashtags in team section

--- a/index.html
+++ b/index.html
@@ -585,10 +585,13 @@
             <div class="content">
               <h5>Meet Our Team</h5>
               <h2 class="fw-bold">Our Core Team</h2>
-              <p>
+              <!-- <p>
                 "Stronger Together: Building Success with Our Valued Partners 💼🤝 <br> #PartnershipPower
                 #BusinessAlliance
                 #TeamworkWins"
+              </p> -->
+              <p>
+                "Stronger Together: Building Success with Our Valued Partners 💼🤝"
               </p>
             </div>
           </div>
