added twitter account

--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
                 <a href="https://www.facebook.com/profile.php?id=100085023799345"> <i class="lni lni-facebook-filled"></i> </a>
               </li>
               <li>
-                <a href="javascript:void(0)"> <i class="lni lni-twitter-original"></i> </a>
+                <a href="https://www.x.com/nuwayinteriors/"> <i class="lni lni-twitter-original"></i> </a>
               </li>
               <li>
                 <a href="https://www.instagram.com/nuwayinteriors/" target="_blank"> <i class="lni lni-instagram-filled"></i> </a>
