--- a/index.html
+++ b/index.html
@@ -1025,10 +1025,10 @@
             <h5 class="text-center social-title">Follow Us On</h5>
             <ul class="social text-center mt-60">
               <li>
-                <a href="https://www.facebook.com/profile.php?id=100085023799345"> <i class="lni lni-facebook-filled"></i> </a>
+                <a href="https://www.facebook.com/profile.php?id=100085023799345" target="_blank"> <i class="lni lni-facebook-filled"></i> </a>
               </li>
               <li>
-                <a href="https://www.x.com/nuwayinteriors/"> <i class="lni lni-twitter-original"></i> </a>
+                <a href="https://www.x.com/nuwayinteriors/" target="_blank"> <i class="lni lni-twitter-original"></i> </a>
               </li>
               <li>
                 <a href="https://www.instagram.com/nuwayinteriors/" target="_blank"> <i class="lni lni-instagram-filled"></i> </a>
