subscribe section hide

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
   </section>
 
 
-  <section class="call-action-area call-action-four">
+  <!-- <section class="call-action-area call-action-four">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -773,7 +773,7 @@
 
     </div>
 
-  </section>
+  </section> -->
 
 
   <!-- <section id="testimonial" class="testimonial-6">
