added team photos

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
           <div class="single-team">
 
             <div class="image">
-              <img src="./images/team/team-1.jpg" alt="Image" />
+              <img src="./images/team/nuway-bobby.png" alt="Image" />
 
               <ul class="social">
                 <li>
@@ -710,7 +710,7 @@
           <div class="single-team">
 
             <div class="image">
-              <img src="./images/team/team-4.jpg" alt="Image" />
+              <img src="./images/team/nuway-raja_enhanced.png.jpg" alt="Image" />
 
               <ul class="social">
                 <li>
