image extension repair

--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
           <div class="single-team">
 
             <div class="image">
-              <img src="./images/team/nuway-raja_enhanced.png.jpg" alt="Image" />
+              <img src="./images/team/nuway-raja_enhanced.png" alt="Image" />
 
               <ul class="social">
                 <li>
