client changes updated

--- a/index.html
+++ b/index.html
@@ -607,6 +607,41 @@
           <div class="single-team">
 
             <div class="image">
+              <img src="./images/team/nuway-raja_enhanced.png" alt="Image" />
+
+              <ul class="social">
+                <li>
+                  <a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)"> <i class="lni lni-twitter-original"></i> </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)"> <i class="lni lni-linkedin-original"></i> </a>
+                </li>
+                <!-- <li>
+                  <a href="javascript:void(0)"> <i class="lni lni-behance-original"></i> </a>
+                </li> -->
+              </ul>
+
+            </div>
+
+            <div class="info-head">
+
+              <div class="info-box">
+                <h4 class="name">Raja Srinivas K
+                </h4>
+                <span class="designation">Founding Partner, Principal Architect <br> <br> </span>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-12">
+          <div class="single-team">
+
+            <div class="image">
               <img src="./images/team/nuway-bobby.png" alt="Image" />
 
               <ul class="social">
@@ -641,7 +676,7 @@
           <div class="single-team">
 
             <div class="image">
-              <img src="./images/team/team-3.jpg" alt="Image" />
+              <img src="./images/team/prasad.jpg" alt="Image" />
 
               <ul class="social">
                 <li>
@@ -669,42 +704,7 @@
 
             </div>
           </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 col-12">
-          <div class="single-team">
-
-            <div class="image">
-              <img src="./images/team/nuway-raja_enhanced.png" alt="Image" />
-
-              <ul class="social">
-                <li>
-                  <a href="javascript:void(0)"> <i class="lni lni-facebook-filled"></i> </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)"> <i class="lni lni-twitter-original"></i> </a>
-                </li>
-                <li>
-                  <a href="javascript:void(0)"> <i class="lni lni-linkedin-original"></i> </a>
-                </li>
-                <!-- <li>
-                  <a href="javascript:void(0)"> <i class="lni lni-behance-original"></i> </a>
-                </li> -->
-              </ul>
-
-            </div>
-
-            <div class="info-head">
-
-              <div class="info-box">
-                <h4 class="name">Raja Srinivas K
-                </h4>
-                <span class="designation">Founding Partner, Principal Architect <br> <br> </span>
-              </div>
-
-            </div>
-          </div>
-        </div>
+        </div>  
 
         <div class="col-lg-3 col-md-6 col-12 d-none">
           <div class="single-team">
@@ -924,14 +924,14 @@
                     <i class="lni lni-map-marker"></i>
                     <ul>
                       <li><span>Location</span></li>
-                      <li>Kukatpally, Hyderabad <br />Telangana</li>
+                      <li>Miyapur, Hyderabad <br />Telangana</li>
                     </ul>
                   </div>
                   <div class="single-info">
                     <i class="lni lni-phone"></i>
                     <ul>
                       <li><span>Call Us</span></li>
-                      <li><a href="javascript:void(0)">+91 94418 56777</a></li>
+                      <li><a href="javascript:void(0)">+91 +91 78158 50981</a></li>
                       <!-- <li><a href="javascript:void(0)">+1 125 458 5555</a></li> -->
                     </ul>
                   </div>
@@ -1048,9 +1048,11 @@
         <div class="row">
           <div class="col-12">
             <div class="copyright text-center">
-              <p class="text">Copyright © 2024 NuWay Interiors. All Rights Reserved</p>
+              <p class="text"><span id="copyright-year"></span> NuWay Interiors. All Rights Reserved</p>
+              <script>
+                  document.getElementById("copyright-year").textContent = "Copyright © " + new Date().getFullYear();
+              </script>
             </div>
-
           </div>
         </div>
       </div>
